# tocin-stream-example

./: Cargo.toml  README.md  build.rs
protocol/: feeds.proto
src/: client.rs  server.rs
